--- a/marvel-softplan-reactjs/package.json
+++ b/marvel-softplan-reactjs/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "softplan-oficial-redux",
+  "name": "softplan-marvel-challenge",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
